updated Galician translation

--- a/po/wesnoth-did/gl.po
+++ b/po/wesnoth-did/gl.po
@@ -13,14 +13,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gl_ES\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-05-11 22:06+0200\n"
-"PO-Revision-Date: 2012-04-29 21:12+0200\n"
-"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
+"POT-Creation-Date: 2012-05-18 12:28+0200\n"
+"PO-Revision-Date: 2012-05-22 08:53+0200\n"
+"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
+"com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"adriyetichaves@gmail.com>\n"
 "com>\n"
 "com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -402,7 +404,7 @@ msgstr ""
 "Coa lei na man, debería executarte no acto, Malin. Non debín darlle ao "
 "nigromante a oportunidade de corromperte. Pero dado que lle amosei clemencia "
 "a el, dareiche a ti o mesmo trato. Quedas por tanto desterrado de Parcin e "
-"de todo o Reino de Wesnoth."
+"de todo o Reino do Noroeste."
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:320
@@ -1090,7 +1092,7 @@ msgid ""
 "word of your demise the town will cheer my triumphant return."
 msgstr ""
 "Levades acosándonos aos humanos cada dous por tres desde os albores do Reino "
-"de Wesnoth. Asaltastes a miña vila sempre que puidestes. Asoballastes os "
+"do Noroeste. Asaltastes a miña vila sempre que puidestes. Asoballastes os "
 "nosos campos, masacrastes o noso gando. Trouxestes a guerra a unha terra de "
 "paz. Matastes sen remordementos, despoxastes a beleza de todo o que a tiña. "
 "Asasinastes a meu pai, e non deixastes de molestarme. É a hora da miña "
@@ -1405,8 +1407,8 @@ msgstr ""
 "«<i>Para a túa última empresa como o meu aprendiz, axudarasme a conseguir un "
 "libro</i>», dixo o nigromante. «<i>O libro… roubáronmo hai moito tempo. Dado "
 "que ten un valor persoal para min, trata esta empresa coma un pequeno favor. "
-"Debo advertirche que será preciso que actúes contra os teus paisanos de "
-"Wesnoth, posto que foi un deles quen mo roubou</i>»."
+"Debo advertirche que será preciso que actúes contra os teus paisanos do "
+"Noroeste, posto que foi un deles quen mo roubou</i>»."
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:116
@@ -1427,9 +1429,9 @@ msgid ""
 "into his manor and seek the book inside.”</i>"
 msgstr ""
 "«<i>Excelente</i>», proseguiu Vol “O escuro”, «<i>viaxaremos, entón, á "
-"cidade de Taz. Hai un señor desa cidade chamado Carres. De novo adestrouse "
-"nas artes máxicas, e agora aproveita a súa riqueza para apoiar nos seus "
-"estudos a un gran número de magos. O libro que buscamos está na súa "
+"cidade de Taz. Hai un cabaleiro desa cidade chamado Carres. De novo "
+"adestrouse nas artes máxicas, e agora aproveita a súa riqueza para apoiar "
+"nos seus estudos a un gran número de magos. O libro que buscamos está na súa "
 "biblioteca. Teremos que entrar na súa casa e buscar o libro dentro</i>»."
 
 #. [side]: type=Apprentice Mage, id=Malin Keshar
@@ -1449,7 +1451,7 @@ msgstr "Teilor"
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:204
 msgid "Malin and Darken Volk enter the Mage Lord’s manor"
-msgstr "Que Malin e Vol “O escuro” entren na casa do señor mago."
+msgstr "Que Malin e Vol “O escuro” entren na casa do cabaleiro mago."
 
 #. [event]
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:253
@@ -1500,8 +1502,8 @@ msgid ""
 "seen by the night watchmen, we will have to make a run for it. Our forces "
 "are not strong enough to take the whole city."
 msgstr ""
-"O libro roubado está na casa do señor Carres, no extremo norte da cidade. "
-"Non podemos enfrontarnos a toda a garda da cidade, así que debemos "
+"O libro roubado está na casa do cabaleiro Carres, no extremo norte da "
+"cidade. Non podemos enfrontarnos a toda a garda da cidade, así que debemos "
 "permanecer agochados sempre que sexa posíbel. A noite e esta néboa hannos "
 "axudar. Unha vez nos vexan os vixías, teremos que correr. As nosas forzas "
 "non son fortes dabondo para tomar o control de toda a cidade."
@@ -1562,12 +1564,12 @@ msgstr "Un pequeno favor, segunda parte"
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg:65
 msgid "Find the mage Lord Karres"
-msgstr "Atopa ao señor mago Carres."
+msgstr "Atopa ao cabaleiro mago Carres."
 
 #. [unit]: type=Arch Mage, type=Great Mage, id=Lord Karres
 #: data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg:121
 msgid "Lord Karres"
-msgstr "Señor Carres"
+msgstr "Cabaleiro Carres"
 
 #. [do]
 #. [event]
@@ -1583,7 +1585,7 @@ msgid ""
 "Malin and Darken Volk enter the mage lord’s manor, quickly closing the heavy "
 "gates behind them."
 msgstr ""
-"Malin e Vol “O escuro” entraron na casa do señor mago e apresurándose a "
+"Malin e Vol “O escuro” entraron na casa do cabaleiro mago e apresurándose a "
 "pechar as grosas portas tras deles."
 
 #. [message]: speaker=Malin Keshar
@@ -1715,8 +1717,8 @@ msgid ""
 "necromancers turn and begin walking down the pitch-black tunnel, temporarily "
 "safe from pursuit."
 msgstr ""
-"Cando entraba no túnel baixo a casa do señor Karres, Vol “O escuro” virouse "
-"e, cunha palabra e un xesto fixo que se colapsase a entrada. Ambos "
+"Cando entraba no túnel baixo a casa do cabaleiro Carres, Vol “O escuro” "
+"virouse e, cunha palabra e un xesto fixo que se colapsase a entrada. Ambos "
 "nigromantes comezaron o descenso polo túnel, escuro coma unha noite sen "
 "estrelas, a salvo de momento dos seus perseguidores."
 
@@ -1734,7 +1736,7 @@ msgstr ""
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:88
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:120
 msgid "Wesnothians"
-msgstr "Habitantes de Wesnoth"
+msgstr "Noroccidentais"
 
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:143
@@ -2008,8 +2010,8 @@ msgid ""
 "overrun by orcs, it rekindles hatred within him. With renewed purpose, he "
 "raises his undead minions and travels northward."
 msgstr ""
-"As palabras e a idea quedaron gravadas na súa mente. Proscrito en todo "
-"Wesnoth, Malin atopou refuxio nunha vila fronteiriza sen nome onde non se "
+"As palabras e a idea quedaron gravadas na súa mente. Proscrito en todo o "
+"Noroeste, Malin atopou refuxio nunha vila fronteiriza sen nome onde non se "
 "facían moitas preguntas. As novas que chegaron á vila de que Parcin fora "
 "invadida polos orcos reavivaron o seu odio por si mesmo. Cunha determinación "
 "renovada ergueu aos seus servos non mortos e viaxou ao norte."
@@ -2486,7 +2488,7 @@ msgid ""
 "proficient are more than a match for any orcs foolish enough to engage them "
 "in combat."
 msgstr ""
-"Nas fronteiras de Wesnoth, todos os homes e mulleres fortes teñen que estar "
+"Nas fronteiras do Noroeste, todos os homes e mulleres fortes teñen que estar "
 "preparados para defender a vila cando sexa preciso. Mentres que os homes se "
 "adestran no manexo da espada e o arco, as mulleres aprenden o manexo do "
 "bastón e o tirafonda. Os máis competentes están á altura de calquera orco "
