--- a/po/wesnoth-ei/gl.po
+++ b/po/wesnoth-ei/gl.po
@@ -9,14 +9,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-04-07 12:14+0200\n"
-"PO-Revision-Date: 2012-04-29 21:13+0200\n"
-"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
+"POT-Creation-Date: 2012-05-18 12:28+0200\n"
+"PO-Revision-Date: 2012-05-22 09:37+0200\n"
+"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
+"com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"adriyetichaves@gmail.com>\n"
 "com>\n"
 "com>\n"
 "com>\n"
@@ -79,7 +81,7 @@ msgid ""
 "the villagers and find out what is happening.\n"
 "\n"
 msgstr ""
-"Corren rumores de ataques de non mortos na fronteira oriental de Wesnoth. "
+"Corren rumores de ataques de non mortos na fronteira oriental do Noroeste. "
 "Ti, un oficial do exército real, fuches enviado á fronte oriental para "
 "protexer aos aldeáns e descubrir o que está a pasar.\n"
 "\n"
@@ -116,7 +118,7 @@ msgid ""
 "occurrences in the Estmark Hills on the eastern border of Wesnoth."
 msgstr ""
 "É o ano trinta do reinado de Conrad II, e ocorren sucesos estraños nas "
-"Lombas de Ismar, na fronteira oriental de Wesnoth."
+"Lombas de Ismar, na fronteira oriental do Noroeste."
 
 #. [part]
 #: data/campaigns/Eastern_Invasion/scenarios/01_The_Outpost.cfg:21
@@ -169,7 +171,7 @@ msgid ""
 "River Guard posts had been abandoned, as colonists spread into the Estmarks "
 "and the orcs were driven in retreat north of the Great River."
 msgstr ""
-"Nos tempos de Garard I, construíranse dous postos fortificados ao longo da "
+"Nos tempos de Gárar I, construíranse dous postos fortificados ao longo da "
 "ribeira occidental do río Güedin, ao sur de Xóuradon, para impedir que "
 "bandidos e orcos do outro lado das Lombas de Ismar entrasen no reino. Pero "
 "nos últimos tempos os postos da garda do río quedaran abandonados, xa que os "
@@ -287,7 +289,7 @@ msgstr "Uedri"
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:50
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:62
 msgid "Wesnothians"
-msgstr "Habitantes de Wesnoth"
+msgstr "Noroccidentais"
 
 #. [unit]: type=White Mage, id=Dacyn
 #. [message]
@@ -643,7 +645,7 @@ msgstr "Quen anda aí?"
 msgid ""
 "We are soldiers of the king of Wesnoth. Will you help us escape these trolls?"
 msgstr ""
-"Somos soldados do reino de Wesnoth. Podédesnos axudar a escapar deses "
+"Somos soldados do Reino do Noroeste. Podédesnos axudar a escapar deses "
 "trolles?"
 
 #. [message]: speaker=unit
@@ -856,14 +858,14 @@ msgid ""
 "to attack the western one, so we can get closer to Wesnoth."
 msgstr ""
 "Boa idea. Despois debemos matar a calquera dos feiticeiros escuros. Eu "
-"preferiría atacar ao do oeste, así nos achegaremos a Wesnoth."
+"preferiría atacar ao do oeste, así nos achegaremos ao Noroeste."
 
 #. [message]: speaker=Mal-Skraat
 #: data/campaigns/Eastern_Invasion/scenarios/03_An_Unexpected_Appearance.cfg:194
 msgid "No! You have defeated me, and can re-enter Wesnoth!"
 msgstr ""
 "Non! Como puideron derrotarme? Como non fun capaz de cortarlles o camiño de "
-"volta a Wesnoth!"
+"volta ao Noroeste!"
 
 #. [message]: speaker=Mal-Skraat
 #: data/campaigns/Eastern_Invasion/scenarios/03_An_Unexpected_Appearance.cfg:215
@@ -886,9 +888,9 @@ msgid ""
 "foothills of the Estmarks in a direction few Wesnothians had traveled "
 "before, into unknown forest country just south of the Great River."
 msgstr ""
-"Pero Uedri e Dasin pronto descubrirían que volver a Wesnoth non ía ser tan "
+"Pero Uedri e Dasin pronto descubrirían que volver ao Noroeste non ía ser tan "
 "doado agora que non podían facelo polas covas polas que fuxiran. Marcharon "
-"das lombas de Ismar por camiños polos que pouca xente de Wesnoth viaxara "
+"das lombas de Ismar por camiños polos que poucos noroccidentais viaxaran "
 "antes, e foron dar a un bosque descoñecido xusto ao sur do Gran Río."
 
 #. [side]: type=Lieutenant, id=Gweddry
@@ -1065,7 +1067,7 @@ msgstr ""
 #. [message]: speaker=Volas
 #: data/campaigns/Eastern_Invasion/scenarios/04a_An_Elven_Alliance.cfg:254
 msgid "You have failed me, man of Wesnoth..."
-msgstr "Falláchesme, home de Wesnoth..."
+msgstr "Falláchesme, home do Noroeste…"
 
 #. [message]: speaker=Volas
 #: data/campaigns/Eastern_Invasion/scenarios/04a_An_Elven_Alliance.cfg:265
@@ -1123,8 +1125,8 @@ msgid ""
 msgstr ""
 "Estás seguro de que esa é a nosa mellor opción? Se en vez de ao norte nos "
 "dirixísemos ao leste, poderíamos atopar ao liche que nos atacou, o “Mal-"
-"Ravanal” ese, e acabar con el antes de que volva atacar Wesnoth. Seguro que "
-"volveu ao leste para buscarnos despois que escapamos."
+"Ravanal” ese, e acabar con el antes de que volva atacar o Noroeste. Seguro "
+"que volveu ao leste para buscarnos despois que escapamos."
 
 #. [message]: speaker=Mal-Skraat
 #: data/campaigns/Eastern_Invasion/scenarios/04b_The_Undead_Border_Patrol.cfg:127
@@ -1143,7 +1145,7 @@ msgstr "Agora nunca me ascenderán!"
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/04b_The_Undead_Border_Patrol.cfg:146
 msgid "Come, let us return to Wesnoth and aid the Northern Outpost."
-msgstr "Vamos, volvamos a Wesnoth e unámonos ao posto de avanzada do norte."
+msgstr "Vamos, volvamos ao Noroeste e unámonos ao posto de avanzada do norte."
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/04b_The_Undead_Border_Patrol.cfg:163
@@ -1473,7 +1475,7 @@ msgstr ""
 "Non ides poder protexer esas vilas dos non mortos, todo aquel que quede "
 "atrás morrerá, ou algo peor. Pero se expulsamos aos bandidos, os aldeáns "
 "poderían acompañarnos ás Terras Nórdicas. Alí terán unha oportunidade de "
-"sobrevivir, as terras de Wesnoth xa non son seguras."
+"sobrevivir, as terras do Noroeste xa non son seguras."
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/05_Northern_Outpost.cfg:162
@@ -2018,7 +2020,7 @@ msgid ""
 "Hail, dwarves! Will you help us get by these foul orcs? We need to get "
 "further along this path."
 msgstr ""
-"Saúdos, ananos das Terras Nórdicas! Somos humanos de Wesnoth, e imos en "
+"Saúdos, ananos das Terras Nórdicas! Somos humanos noroccidentais, e imos en "
 "dirección norte. Estaríades dispostos a axudarnos a derrotar aos orcos que "
 "se interpoñen no noso camiño?"
 
@@ -2565,8 +2567,8 @@ msgid ""
 "Good, we have escaped from these orcs. But where will we go? There are "
 "undead in Wesnoth."
 msgstr ""
-"Conseguimos escapar dos orcos. Pero agora onde imos? Se nos diriximos a "
-"Wesnoth, atoparémonos cos non mortos."
+"Conseguimos escapar dos orcos. Pero agora onde imos? Se nos diriximos ao "
+"Reino do Noroeste, atoparémonos cos non mortos."
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/12_Evacuation.cfg:310
@@ -2600,7 +2602,7 @@ msgid ""
 msgstr ""
 "Ben, ao final non tivemos que derrubar a ponte. De todos xeitos, temos que "
 "abandonar as Terras Nórdicas antes de que veñan máis orcos. Pero onde imos? "
-"Se nos diriximos a Wesnoth atoparémonos cos non mortos."
+"Se nos diriximos ao Reino do Noroeste atoparémonos cos non mortos."
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/12_Evacuation.cfg:361
@@ -2618,7 +2620,8 @@ msgstr ""
 "Non podemos ir ao norte, alí están os orcos… Non podemos ir ao leste, de alí "
 "é de onde veñen os non mortos… Non podemos ir ao oeste, nesa dirección está "
 "o océano, e non temos barcos. Poderiamos sobrevivir aquí por unha tempada, "
-"pero seguiríamos en terras de Wesnoth, e os non mortos acabarían atopándonos."
+"pero seguiríamos en terras do Noroeste, e os non mortos acabarían "
+"atopándonos."
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/12_Evacuation.cfg:369
@@ -2626,7 +2629,8 @@ msgid ""
 "We could go south, and return to Wesnoth... but I do not know what that "
 "would accomplish."
 msgstr ""
-"Poderiamos ir ao sur, volver a Wesnoth… Pero non vexo de que nos serviría."
+"Poderiamos ir ao sur, volver ao Reino do Noroeste… Pero non vexo de que nos "
+"serviría."
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/12_Evacuation.cfg:373
@@ -2653,9 +2657,9 @@ msgid ""
 "aid the king in defeating these invaders. We saw them attack us. And, I "
 "have... advice. To give the king. I may know the undead’s weakness."
 msgstr ""
-"Aínda queda algunha esperanza. Se volvemos a Wesnoth, poderiamos intentar "
-"axudar ao rei a derrotar aos invasores. Vimos como nos atacaban. E teño… "
-"teño un consello. Un consello para o rei. Creo que sei cal pode ser a "
+"Aínda queda algunha esperanza. Se volvemos ao Reino do Noroeste, poderiamos "
+"intentar axudar ao rei a derrotar aos invasores. Vimos como nos atacaban. E "
+"teño… teño un consello. Un consello para o rei. Creo que sei cal pode ser a "
 "debilidade dos non mortos."
 
 #. [message]: speaker=Gweddry
@@ -2844,7 +2848,7 @@ msgstr "Vinde, entrade no castelo."
 #. [message]: speaker=Konrad II
 #: data/campaigns/Eastern_Invasion/scenarios/14_Approaching_Weldyn.cfg:249
 msgid "Weldyn has been captured, and Wesnoth is no more..."
-msgstr "Güedin foi capturada, e así foi como o caeu o Reino de Wesnoth…"
+msgstr "Güedin foi capturada, e así foi como o caeu o Reino do Noroeste…"
 
 #. [scenario]: id=15_The_Council
 #: data/campaigns/Eastern_Invasion/scenarios/15_The_Council.cfg:4
@@ -2963,8 +2967,8 @@ msgid ""
 "We must fight, obviously. Surely the might of Wesnoth can triumph over a "
 "mere lich!"
 msgstr ""
-"Obviamente debemos loitar. Ningún liche pode facerlle fronte ao poder de "
-"Wesnoth!"
+"Obviamente debemos loitar. Ningún liche pode facerlle fronte ao poder do "
+"Noroeste!"
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/15_The_Council.cfg:116
@@ -2986,7 +2990,7 @@ msgid ""
 "only by horrible luck that we are back in Wesnoth at all."
 msgstr ""
 "Intentamos fuxir deles, pois sabiamos que eran demasiado poderosos. Pero a "
-"sorte tróuxonos de volta a Wesnoth."
+"sorte tróuxonos de volta ao Reino do Noroeste."
 
 #. [message]: speaker=Kaldor
 #: data/campaigns/Eastern_Invasion/scenarios/15_The_Council.cfg:124
@@ -3268,7 +3272,8 @@ msgid ""
 "I have waited a long time for this day to come. Prepare to die, Gweddry of "
 "Wesnoth!"
 msgstr ""
-"Levo moito tempo esperando este día. Prepárate para morrer, Uedri de Wesnoth!"
+"Levo moito tempo esperando este día. Prepárate para morrer, Uedri do "
+"Noroeste!"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Eastern_Invasion/scenarios/17a_The_Duel.cfg:94
@@ -3423,12 +3428,12 @@ msgstr "Matade ao rei!"
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:342
 msgid "They killed Konrad... now, even if we save Weldyn, Wesnoth has fallen."
 msgstr ""
-"Mataron a Conrad… Wesnoth está acabado, de nada serve xa salvar Güedin."
+"Mataron a Conrad… O Noroeste está acabado, de nada serve xa salvar Güedin."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:358
 msgid "The Kingdom of Wesnoth dies with me!"
-msgstr "O Reino de Wesnoth morre comigo!"
+msgstr "O Reino do Noroeste morre comigo!"
 
 #. [scenario]: id=18_Epilogue
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:4
@@ -3474,7 +3479,7 @@ msgid ""
 "author of Wesnoth’s troubles."
 msgstr ""
 "Conseguimos unha gran vitoria destruíndo ao que foi o principal responsábel "
-"dos problemas de Wesnoth."
+"dos problemas do Noroeste."
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:90
@@ -3590,8 +3595,8 @@ msgid ""
 "With these words and acts began the Silver Age of Wesnoth, that time known "
 "to historians as the Reconstruction..."
 msgstr ""
-"E foi así como comezou a que os historiadores chamarían a «Época prateada de "
-"Wesnoth», a súa reconstrución."
+"E foi así como comezou a que os historiadores chamarían a «Época prateada do "
+"Noroeste», a súa reconstrución."
 
 # Horse Lord=señor dos cabalos FIXADO
 #. [unit_type]: id=Horse Lord, race=human
@@ -3719,8 +3724,8 @@ msgid ""
 "to all in its path."
 msgstr ""
 "Quizais foi o mellor para os homes de Uedri non vivir para ver a "
-"desalentadora masa de non mortos varrer Wesnoth de leste a oeste, arrasando "
-"con todo ao seu paso."
+"desalentadora masa de non mortos varrer o Reino do Noroeste dunha a outra "
+"punta, arrasando con todo ao seu paso."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Eastern_Invasion/utils/deaths.cfg:85
@@ -3729,9 +3734,9 @@ msgid ""
 "would suffer the rage and malice of marauding orcs and undead in a war that "
 "would end only in misery and death."
 msgstr ""
-"En Wesnoth nunca se soubo do que fora de Uedri e os seus, pero non tardaron "
-"en sufrir a ira e a maldade dos orcos e os non mortos das fronteiras, nunha "
-"guerra que non supuxo máis que morte e miseria."
+"No Reino do Noroeste nunca se soubo do que fora de Uedri e os seus, pero non "
+"tardaron en sufrir a ira e a maldade dos orcos e os non mortos das "
+"fronteiras, nunha guerra que non supuxo máis que morte e miseria."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Eastern_Invasion/utils/deaths.cfg:97
@@ -3741,7 +3746,7 @@ msgid ""
 "sides to a final defense of the doomed kingdom."
 msgstr ""
 "O seu país natal demostrou non ser refuxio para os cansos homes de Uedri, "
-"nin tampouco o sería para o resto dos habitantes de Wesnoth, a quen o "
+"nin tampouco o sería para o resto dos habitantes do Noroeste, a quen o "
 "inimigo obrigou a defender o seu reino por última vez, un reino condenado."
 
 #. [message]: speaker=narrator
@@ -3751,7 +3756,7 @@ msgid ""
 "once-great kingdom was plunged into final darkness under the vengeful hand "
 "of Mal-Ravanal."
 msgstr ""
-"Cos defensores máis entregados de Wesnoth vencidos nas súas propias terras, "
+"Cos defensores máis entregados do Noroeste vencidos nas súas propias terras, "
 "o outrora gran reino quedou sumido na escuridade nas vingativas mans de Mal-"
 "Ravanal."
 
