--- a/po/wesnoth-manpages/gl.po
+++ b/po/wesnoth-manpages/gl.po
@@ -12,8 +12,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "POT-Creation-Date: 2012-01-06 12:00+0100\n"
-"PO-Revision-Date: 2012-04-29 19:36+0200\n"
-"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
+"PO-Revision-Date: 2012-05-22 07:06+0200\n"
+"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
+"com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
@@ -51,7 +52,7 @@ msgstr "wesnoth"
 #: ../../doc/man/wesnoth.6:16
 #, no-wrap
 msgid "Battle for Wesnoth"
-msgstr "A batalla por Wesnoth"
+msgstr "A batalla polo Noroeste"
 
 # type: SH
 #. type: SH
@@ -65,8 +66,8 @@ msgstr "NOME"
 #: ../../doc/man/wesnoth.6:20
 msgid "wesnoth - Battle for Wesnoth, a turn-based fantasy strategy game"
 msgstr ""
-"wesnoth — A batalla por Wesnoth, un xogo de estratexia por roldas ambientado "
-"nun mundo fantástico."
+"wesnoth — A batalla polo Noroeste, un xogo de estratexia por roldas "
+"ambientado nun mundo fantástico."
 
 # type: SH
 #. type: SH
@@ -93,7 +94,7 @@ msgstr "DESCRICIÓN"
 #: ../../doc/man/wesnoth.6:32
 msgid "Battle for B<Wesnoth> is a turn-based fantasy strategy game."
 msgstr ""
-"A batalla por B<Wesnoth> é un xogo de estratexia por roldas ambientado nun "
+"A batalla polo B<Noroeste> é un xogo de estratexia por roldas ambientado nun "
 "mundo fantástico."
 
 # type: Plain text
@@ -116,9 +117,9 @@ msgstr ""
 "fagan o mesmo. A medida que as unidades consigan experiencia, adquirirán "
 "novas habilidades e volveranse máis fortes. Xoga na lingua que queiras e pon "
 "a proba as túas habilidades contra a intelixencia artificial, ou únete á "
-"enorme comunidade internacional de xogadores de A batalla por Wesnoth que se "
-"reúne na Internet. Crea unidades, escenarios ou campañas personalizadas, e "
-"compárteo todo co resto da comunidade."
+"enorme comunidade internacional de xogadores que se reúne na internet. Crea "
+"unidades, escenarios ou campañas personalizadas, e compárteo todo co resto "
+"da comunidade."
 
 # type: SH
 #. type: SH
@@ -990,7 +991,7 @@ msgstr "wesnothd"
 #: ../../doc/man/wesnothd.6:16
 #, no-wrap
 msgid "Battle for Wesnoth multiplayer network daemon"
-msgstr "Daemon de rede para partidas con varios xogadores de A batalla por Wesnoth"
+msgstr "Daemon de rede para partidas con varios xogadores de A batalla polo Noroeste"
 
 # type: Plain text
 #. type: Plain text
@@ -998,7 +999,7 @@ msgstr "Daemon de rede para partidas con varios xogadores de A batalla por Wesno
 msgid "wesnothd - Battle for B<Wesnoth> multiplayer network daemon"
 msgstr ""
 "wesnothd — Daemon de rede para partidas con varios xogadores de A batalla "
-"por B<Wesnoth>."
+"polo B<Noroeste>."
 
 # type: Plain text
 #. type: Plain text
@@ -1024,9 +1025,9 @@ msgid ""
 "wiki/ServerAdministration on what commands the server accepts via the "
 "wesnoth client (/query ...) or the fifo."
 msgstr ""
-"Xestiona partidas de A batalla por Wesnoth con varios xogadores. Véxanse en "
-"«http://www.wesnoth.org/wiki/ServerAdministration» (en inglés) as ordes que "
-"acepta o servidor a través do cliente wesnoth (/query […]) ou do fifo."
+"Xestiona partidas de A batalla polo Noroeste con varios xogadores. Véxanse "
+"en «http://www.wesnoth.org/wiki/ServerAdministration» (en inglés) as ordes "
+"que acepta o servidor a través do cliente wesnoth (/query […]) ou do fifo."
 
 # type: TP
 #. type: TP
@@ -1307,7 +1308,7 @@ msgid ""
 "B</var/run/socket/wesnothd/socket>)."
 msgstr ""
 "A ruta ao fifo polo que se poden enviar ordes ao servidor —equivalente ao “/"
-"query …” desde o wesnoth—. Se non se especifica outra cousa, toma a ruta "
+"query …” desde o xogo—. Se non se especifica outra cousa, toma a ruta "
 "indicada como valor predeterminado durante a compilación (en principio B</"
 "var/run/socket/wesnothd/socket>)."
 
@@ -1483,7 +1484,7 @@ msgid ""
 msgstr ""
 "Unha lista separada por comas de cadeas de versión que o servidor aceptará. "
 "Pódense empregar os comodíns de patróns B<*> e B<?>. O seu valor "
-"predeterminado será a versión do wesnoth correspondente."
+"predeterminado será a versión do xogo correspondente."
 
 # type: Plain text
 #. type: Plain text
