--- a/po/wesnoth-nr/gl.po
+++ b/po/wesnoth-nr/gl.po
@@ -10,14 +10,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2012-04-29 21:19+0200\n"
-"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
+"POT-Creation-Date: 2012-05-18 12:28+0200\n"
+"PO-Revision-Date: 2012-05-22 09:15+0200\n"
+"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
+"com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"adriyetichaves@gmail.com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Lokalize 1.4\n"
 
@@ -137,14 +139,15 @@ msgid ""
 "trade mingled more with the other kindred races than was common elsewhere. "
 "Dwarven Doors grew populous and wealthy."
 msgstr ""
-"Moi ao norte de Wesnoth, moi preto das covas dos ananos de Neilga, houbo "
-"unha vez unha próspera e variada comunidade coñecida como as Portas dos "
-"Ananos. Ata aquí chegaban comida, madeira e roupas de todo Wesnoth e moitas "
-"das terras dos elfos, e á superficie exportábanse minerais, metais e "
-"manufacturas dos ananos. Humanos e ananos traballaban e vivían xuntos. Mesmo "
-"os elfos que chegaban para comerciar relacionábanse máis con estas especies "
-"do que adoitaban facer en calquera outra parte do mundo. A poboación e "
-"prosperidade das Portas dos Ananos aumentaba rapidamente."
+"Lonxe, ao norte do Reino do Noroeste, preto das covas dos ananos de Neilga, "
+"houbo unha vez unha próspera e variada comunidade coñecida como as Portas "
+"dos Ananos. Ata aquí chegaban comida, madeira e roupas de todo o Reino do "
+"Noroeste e moitas das terras dos elfos, e á superficie exportábanse "
+"minerais, metais e manufacturas dos ananos. Humanos e ananos traballaban e "
+"vivían xuntos. Mesmo os elfos que chegaban para comerciar relacionábanse "
+"máis con estas especies do que adoitaban facer en calquera outra parte do "
+"mundo. A poboación e prosperidade das Portas dos Ananos aumentaba "
+"rapidamente."
 
 # Dwarven Doors=Portas dos Ananos FIXADO
 #. [part]
@@ -238,7 +241,7 @@ msgstr ""
 "Os que seguiron foron anos escuros, xeracións de humanos medraron na "
 "escravitude, e case chegaron esquecer que os seus devanceiros foran noutro "
 "tempo libres. E se non o esqueceron completamente foi por un fatídico día do "
-"518 d.W. Un día que cambiou as vidas das xentes das Portas dos Ananos. Que "
+"518 d.N. Un día que cambiou as vidas das xentes das Portas dos Ananos. Que "
 "as cambiou para sempre."
 
 #. [part]
@@ -272,8 +275,8 @@ msgstr ""
 "rápido que os pensamentos, e os odiosos orcos caian ao seu arredor. Á súa "
 "dereita loitaba un vello mago cuxa voz lanzaba encantamentos sobre o clamor "
 "da batalla mentres a propia terra tremía co poder dos seus feitizos. Á súa "
-"esquerda, brillando cun lume máxico, un gran señor dos elfos. Preto deles "
-"apoiábaos un pequeno pero poderoso exército de elfos."
+"esquerda, brillando cun lume máxico, un gran cabaleiro dos elfos. Preto "
+"deles apoiábaos un pequeno pero poderoso exército de elfos."
 
 #. [part]
 #. tyrant -> Queen Asheviere from Heir to the Throne.
@@ -285,7 +288,7 @@ msgid ""
 "and they stood, rooted to their places in awe."
 msgstr ""
 "Entre os humanos non tardou en espallarse a nova de que este heroe non era "
-"outro que o príncipe Conrad de Wesnoth, que se dirixía cara as ruínas de "
+"outro que o príncipe Conrad do Noroeste, que se dirixía cara as ruínas de "
 "Neilga para recuperar o Cetro de Lume e usalo para salvar a súa terra natal "
 "dunha tirana, e quedaron marabillados, impresionados."
 
@@ -1203,7 +1206,7 @@ msgid ""
 msgstr ""
 "Xa vexo. Os ananos de Neilga estámosvos tamén nunha difísil situasión. Pero "
 "non esquesemos os antigos pactos. Benvidos ao noso asentamento. Entrade, e "
-"falade co noso xefe, o señor Hamel."
+"falade co noso xefe, o cabaleiro Hamel."
 
 #. [message]: speaker=Tallin
 #. [message]: speaker=unit
@@ -1239,7 +1242,7 @@ msgstr ""
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:647
 msgid "Thank you and well-met indeed, Lord Hamel."
-msgstr "Grazas, é un pracer coñecelo, señor Hamel."
+msgstr "Grazas, é un pracer coñecelo, cabaleiro Hamel."
 
 #. [message]: role=Supporter
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:651
@@ -1362,7 +1365,7 @@ msgid ""
 "by Tallin and the dwarves led by Lord Hamel made council."
 msgstr ""
 "Unha vez chegados á torre dos ananos e curados os feridos, humanos —"
-"dirixidos por Talin— e ananos —liderados polo señor Hamel— celebraron un "
+"dirixidos por Talin— e ananos —liderados polo cabaleiro Hamel— celebraron un "
 "consello."
 
 #. [part]
@@ -1378,7 +1381,7 @@ msgid ""
 "Thank you, Lord Hamel. Though Knalga lies in chaos, it is a great relief to "
 "see that at least some dwarves have survived."
 msgstr ""
-"Grazas, señor Hamel. Aínda que Neilga estea sumida no caos, é un gran "
+"Grazas, cabaleiro Hamel. Aínda que Neilga estea sumida no caos, é un gran "
 "consolo ver que polo menos sobreviviron algúns ananos."
 
 #. [part]
@@ -1431,10 +1434,10 @@ msgid ""
 "this sorry state — where are they now? From what I have seen, it is mostly "
 "trolls and skeletons who lately haunt these caves."
 msgstr ""
-"Se non lle importa que llo pregunte, señor Hamel, como fixestes exactamente "
-"para sobrevivir á invasión dos orcos? E onde están agora esas noxentas "
-"criaturas, onde foron tras invadir Neilga? Polo de agora non vimos máis que "
-"trolles e esqueletos por estas covas."
+"Se non lle importa que llo pregunte, cabaleiro Hamel, como fixestes "
+"exactamente para sobrevivir á invasión dos orcos? E onde están agora esas "
+"noxentas criaturas, onde foron tras invadir Neilga? Polo de agora non vimos "
+"máis que trolles e esqueletos por estas covas."
 
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/03_To_the_Mines.cfg:50
@@ -1510,7 +1513,7 @@ msgid ""
 "Well, we are here with you now Lord Hamel, and in exchange for proper "
 "weapons, we will gladly assist you in clearing these caves of monsters."
 msgstr ""
-"Ben, agora estamos aquí convosco, señor Hamel, e a cambio de armas "
+"Ben, agora estamos aquí convosco, cabaleiro Hamel, e a cambio de armas "
 "axeitadas, axudarémosvos con moito gusto a acabar con todos os monstros "
 "destas covas."
 
@@ -1563,7 +1566,7 @@ msgid ""
 "certain death. If our fate is death then so be it. Until that time comes, my "
 "people will fight and I will lead them to fight!"
 msgstr ""
-"Con todo o respecto, señor Hamel, os habitantes das Portas dos Ananos "
+"Con todo o respecto, cabaleiro Hamel, os habitantes das Portas dos Ananos "
 "tivemos que facer varias “loucuras” xa. Sublevarnos contra os orcos era unha "
 "loucura. Virmos a estas tétricas covas era unha loucura. Se o noso destino é "
 "a morte, que así sexa, pero ata que nos chegue a hora, loitaremos!"
@@ -1831,8 +1834,8 @@ msgid ""
 msgstr ""
 "<b>Ha ha ha ha!</b> Saíches simpático, ananiño. Pronto hei retomar e "
 "completar a matanza que comezaran os orcos, e Neilga será toda miña! Desde "
-"aquí limparei a face da terra de toda criatura vivinte, e despois irei a por "
-"Wesnoth!"
+"aquí limparei a face da terra de toda criatura vivinte, e despois irei a "
+"polo Reino do Noroeste!"
 
 #. [message]: speaker=Hamel
 #: data/campaigns/Northern_Rebirth/scenarios/04_Clearing_the_Mines.cfg:427
@@ -2052,9 +2055,9 @@ msgid ""
 "With all respect, Lord Hamel, some o’ us would like to fare forth with "
 "Tallin. He’s lucky, he is — or he makes his own luck."
 msgstr ""
-"Con todo o respecto, señor Hamel, a alghúns de nós ghustaríanos seghir con "
-"Talin. Non sei se é casualidade ou habilidade, pero está claro que a sorte "
-"está da súa parte."
+"Con todo o respecto, cabaleiro Hamel, a alghúns de nós ghustaríanos seghir "
+"con Talin. Non sei se é casualidade ou habilidade, pero está claro que a "
+"sorte está da súa parte."
 
 #. [message]: speaker=Hamel
 #: data/campaigns/Northern_Rebirth/scenarios/04_Clearing_the_Mines.cfg:745
@@ -2066,7 +2069,7 @@ msgstr ""
 #. [message]: role=follower
 #: data/campaigns/Northern_Rebirth/scenarios/04_Clearing_the_Mines.cfg:749
 msgid "Thank you, Lord Hamel."
-msgstr "Ghrasas, señor Hamel."
+msgstr "Ghrasas, cabaleiro Hamel."
 
 #. [scenario]: id=05a_The_Pursuit, (role=Study Guard) (
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:9
@@ -2209,13 +2212,13 @@ msgid ""
 "Finally! I am free. Lord Tallin, I am forever in your debt! We will follow "
 "you to the end of the world if need be."
 msgstr ""
-"Por fin libre! Señor Talin, estou en débeda con vostede! Seguireino ata a "
-"fin do mundo se teño que facelo."
+"Por fin libre! Cabaleiro Talin, estou en débeda con vostede! Seguireino ata "
+"a fin do mundo se teño que facelo."
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:571
 msgid "It’s just ‘Tallin’, no ‘Lord’. And no problem."
-msgstr "«Talin» a secas, nada de señor. E toda axuda será benvida."
+msgstr "«Talin» a secas, nada de «cabaleiro». E toda axuda será benvida."
 
 #. [message]: speaker=Sister Thera
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:582
@@ -2346,7 +2349,7 @@ msgstr "Irmá Dera"
 #. [message]: speaker=Sister Thera
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:683
 msgid "Freedom at last. Thank you, Lord Tallin."
-msgstr "Por fin libres! Grazas, señor Talin."
+msgstr "Por fin libres! Grazas, cabaleiro Talin."
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:687
@@ -2354,8 +2357,8 @@ msgid ""
 "Just ‘Tallin’. I am no Lord, just a humble peasant trying to restore our "
 "people to freedom."
 msgstr ""
-"«Talin» a secas. Non son máis que un labrego que intenta devolverlle a "
-"liberdade á súa xente."
+"«Talin» a secas. Non son cabaleiro, simplemente un labrego que intenta "
+"devolverlle a liberdade á súa xente."
 
 #. [message]: speaker=Sister Thera
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:718
@@ -2468,7 +2471,7 @@ msgstr ""
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:833
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:871
 msgid "Yes, I would... like to join... you Lord Tallin."
-msgstr "Si, gustaríame… unirme a vós... señor Talin."
+msgstr "Si, gustaríame… unirme a vós... cabaleiro Talin."
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:837
@@ -2476,8 +2479,8 @@ msgid ""
 "Just Tallin; I am no lord. But gee, that sure is some powerful spell you "
 "used on her, Sister. She is looking better already."
 msgstr ""
-"«Talin», sen máis. Non son ningún señor. Oe, ese feitizo que usaches con ela "
-"é incrible, irmá. Xa ten mellor pinta."
+"«Talin», sen máis. Non son ningún cabaleiro. Oe, ese feitizo que usaches con "
+"ela é incríbel, irmá. Xa ten mellor pinta."
 
 #. [message]: speaker=Elenia
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:841
@@ -2513,7 +2516,7 @@ msgstr ""
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:875
 msgid "Just Tallin, I am no lord. And you are looking better already."
-msgstr "«Talin» a secas, non son un señor. E xa tes mellor aspecto."
+msgstr "«Talin» a secas, non son cabaleiro. E xa tes mellor aspecto."
 
 #. [message]: speaker=Elenia
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:882
@@ -2912,8 +2915,8 @@ msgid ""
 msgstr ""
 "Pois, que queres que che diga, non é que sexa o noso caso. Neilga está "
 "arruinada, os orcos dominan a superficie, e estas criaturas escuras e "
-"malvadas cazan polas pasaxes subterráneas. E namentres, disque o trono de "
-"Wesnoth rexéntao a cruel raíña Asheviere, e o seu lexítimo herdeiro "
+"malvadas cazan polas pasaxes subterráneas. E namentres, disque o tronodo "
+"Noroeste rexéntao a cruel raíña Asheviere, e o seu lexítimo herdeiro "
 "probabelmente morreu nun van intento por conseguir o Cetro de Lume."
 
 #. [message]: speaker=Abhai
@@ -3311,8 +3314,8 @@ msgid ""
 "Right... sorry about that. My name is Lord Abhai and I am... or was... the "
 "ruler of the great kingdom of Garet-Desh."
 msgstr ""
-"Ah, certo… persoa. Son o señor Abai e son… ou máis ben era… o gobernante do "
-"gran reino de Garedés."
+"Ah, certo… persoa. Son o cabaleiro Abai e son… ou máis ben era… o gobernante "
+"do gran reino de Garedés."
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2208
@@ -4124,7 +4127,7 @@ msgstr ""
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/06a_Old_Friend.cfg:109
 msgid "I would be honored, Lord Hamel."
-msgstr "Sería un honor aprender de vostede, señor Hamel."
+msgstr "Sería un honor aprender de vostede, cabaleiro Hamel."
 
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/06a_Old_Friend.cfg:113
@@ -4285,8 +4288,8 @@ msgstr ""
 "Bah! Quero ver como eses covardes dos ananos intentan traizoarme como "
 "fixeron con “Caíño negro”! Non tardarán en axeonllarse ante min e equipar "
 "aos meus orcos coas súas armas; con elas e as riquezas de Neilga, nada "
-"poderá deternos. Dentro de pouco esas augas mortas que chamades «Wesnoth» "
-"non serán máis que escombros e cinza."
+"poderá deternos. Dentro de pouco esas augas mortas que chamades «Reino do "
+"Noroeste» non serán máis que escombros e cinza."
 
 #. [message]: id=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/06a_Old_Friend.cfg:333
@@ -4817,7 +4820,7 @@ msgid ""
 msgstr ""
 "Podemos desbotar aos elfos. Son un fato de eghoístas que só se interesan por "
 "eles. Só nos axudarían se lles ocorrese algho grave e presisasen da nosa "
-"axuda. Que hai de Wesnoth?"
+"axuda. Que hai do Reino do Noroeste?"
 
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:83
@@ -4825,8 +4828,8 @@ msgid ""
 "Wesnoth is too far away, and we have no idea what political state they are "
 "in."
 msgstr ""
-"Wesnoth está moi lonxe, e non temos nin idea do estado político no que se "
-"atopan agora mesmo."
+"Está moi lonxe, e non temos nin idea do estado político no que se atopan "
+"agora mesmo."
 
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:87
@@ -5186,8 +5189,8 @@ msgstr ""
 "Ah… Dá igual, viñemos por asuntos máis urxentes. Necesitamos "
 "desesperadamente a vosa axuda. Este de aquí é Talin, das Portas dos Ananos. "
 "Como xa sabedes, a súa xente estivo escravizada polos orcos durante moitos "
-"anos. Pero rebeláronse, e xunta o señor Hamel, de Neilga, intentan devolver "
-"as cousas á normalidade nas súas terras."
+"anos. Pero rebeláronse, e xunta o cabaleiro Hamel, de Neilga, intentan "
+"devolver as cousas á normalidade nas súas terras."
 
 #. [message]: id=Ro'Sothian
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:455
@@ -6504,8 +6507,8 @@ msgid ""
 msgstr ""
 "Pois, que queres que che diga, non é que sexa o noso caso. Neilga está "
 "arruinada, os orcos dominan a superficie, e estas criaturas escuras e "
-"malvadas cazan polas pasaxes subterráneas. E namentres, disque o trono de "
-"Wesnoth rexéntao a cruel raíña Asheviere, e o seu lexítimo herdeiro "
+"malvadas cazan polas pasaxes subterráneas. E namentres, disque o tronodo "
+"Noroeste o rexenta a cruel raíña Asheviere, e o seu lexítimo herdeiro "
 "probabelmente morreu nun van intento por conseguir o Cetro de Lume."
 
 #. [part]
@@ -7278,8 +7281,8 @@ msgid ""
 "attempting to restore peace and freedom to Knalga."
 msgstr ""
 "Para nada. Son Talin, da vila de humanos das Portas dos Ananos. Xunto co "
-"señor dos ananos, o señor Hamel, e o mago Ardian e mailo seu irmán, "
-"intentamos restaurar a paz e a liberdade en Neilga."
+"cabaleiro dos ananos Hamel e o mago Ardian e mailo seu irmán, intentamos "
+"restaurar a paz e a liberdade en Neilga."
 
 #. [message]: speaker=Eryssa
 #: data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg:230
@@ -7625,7 +7628,7 @@ msgid ""
 msgstr ""
 "Non, Talin. Apartácheste do camiño, si, pero aínda non está todo perdido. A "
 "chama que acendiches segue alumando os corazóns do teu pobo, que aínda é "
-"libre e loita ás ordes de Hamel, o señor dos ananos. Como puideches ver, "
+"libre e loita ás ordes de Hamel, o cabaleiro dos ananos. Como puideches ver, "
 "destruíron a Malifor, e agora intentan arrebatarlle Neilga aos orcos. Pero o "
 "seu enfrontamento contra Malifor debilitounos e están esgotados. Un gran "
 "exército de orcos vai tras deles e, sen axuda, pronto os derrotarán e as "
@@ -9780,7 +9783,8 @@ msgid ""
 msgstr ""
 "Este consello non reclamará a soberanía sobre ningún pobo ou terra, senón "
 "que existirá para evitar os enfrontamentos e asaltos nas terras ao sur e "
-"leste do gran océano, ao norte de Wesnoth e ao oeste dos bosques dos elfos."
+"leste do Gran Océano, ao norte do Reino do Noroeste e ao oeste dos bosques "
+"dos elfos."
 
 #. [message]: id=Father Morvin
 #: data/campaigns/Northern_Rebirth/scenarios/14a_Epilogue.cfg:132
@@ -9915,12 +9919,12 @@ msgstr "Estalar?"
 #. [message]: id=Stalrag
 #: data/campaigns/Northern_Rebirth/scenarios/14a_Epilogue.cfg:204
 msgid "I am yours to command, my lord Tallin."
-msgstr "Estou ás súas ordes, señor Talin."
+msgstr "Estou ás súas ordes, cabaleiro Talin."
 
 #. [message]: id=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/14a_Epilogue.cfg:208
 msgid "‘Lord’? Oh no!"
-msgstr "Non, «señor» non!"
+msgstr "Non, «cabaleiro» non!"
 
 #. [message]: id=Sister Thera
 #: data/campaigns/Northern_Rebirth/scenarios/14a_Epilogue.cfg:212
@@ -10481,7 +10485,7 @@ msgstr "Hm… Pai? Acaban de asasinar á túa esposa…"
 #: data/campaigns/Northern_Rebirth/utils/herodeaths.cfg:312
 msgid "Oh right. I CALL UPON THE LORDS OF LIGHT TO GRANT YOU LIFE!"
 msgstr ""
-"Ah, si. <b>Fago un chamamento aos deuses da luz. Devolvédea á vida!</b>"
+"Ah, si. <b>Fago un chamamento aos señores da luz. Devolvédea á vida!</b>"
 
 #. [message]: speaker=Sister Thera
 #: data/campaigns/Northern_Rebirth/utils/herodeaths.cfg:320
@@ -10541,7 +10545,7 @@ msgstr "(<i>sorrí</i>) Grazas, meu amor."
 #. [message]: speaker=Father Morvin
 #: data/campaigns/Northern_Rebirth/utils/herodeaths.cfg:447
 msgid "Thank the Lords of Light, not me!"
-msgstr "Dálle as grazas aos deuses da luz, non a min!"
+msgstr "Dálle as grazas aos señores da luz, non a min!"
 
 #. [message]: speaker=Sister Thera
 #. [message]: speaker=Father Morvin
