--- a/po/wesnoth-units/gl.po
+++ b/po/wesnoth-units/gl.po
@@ -16,14 +16,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-04-07 12:15+0200\n"
-"PO-Revision-Date: 2012-04-29 19:46+0200\n"
-"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
+"POT-Creation-Date: 2012-05-18 12:28+0200\n"
+"PO-Revision-Date: 2012-05-22 09:33+0200\n"
+"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
+"com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"adriyetichaves@gmail.com>\n"
 "com>\n"
 "com>\n"
 "com>\n"
@@ -256,11 +258,11 @@ msgid ""
 "The deafening noise of these ‘thundersticks’ is terrifying to behold, and is "
 "made more so by the secrecy which dwarves wrap about their workings."
 msgstr ""
-"Cando os humanos de Wesnoth atoparon por vez primeira aos ananos, quedaron "
-"pampos co poder dos seus arcabuceiros, capaces de provocar a morte desde moi "
-"lonxe mediante uns estraños paus que levaban á batalla. O enxordecedor ruído "
-"destes “arcabuces” xa resulta bastante terrorífico de por si, pero o segredo "
-"que os ananos gardan sobre as súas obras o empeora."
+"Cando os humanos do Reino do Noroeste atoparon por vez primeira aos ananos, "
+"quedaron pampos co poder dos seus arcabuceiros, capaces de provocar a morte "
+"desde moi lonxe mediante uns estraños paus que levaban á batalla. O "
+"enxordecedor ruído destes “arcabuces” xa resulta bastante terrorífico de por "
+"si, pero o segredo que os ananos gardan sobre as súas obras o empeora."
 
 # thunderstick=arcabuz FIXADO
 #. [attack]: type=pierce
@@ -1080,7 +1082,7 @@ msgstr "Anano gardián"
 #. [unit_type]: id=Dwarvish Lord, race=dwarf
 #: data/core/units/dwarves/Lord.cfg:4
 msgid "Dwarvish Lord"
-msgstr "Señor anano"
+msgstr "Cabaleiro anano"
 
 #. [unit_type]: id=Dwarvish Lord, race=dwarf
 #: data/core/units/dwarves/Lord.cfg:19
@@ -1519,7 +1521,7 @@ msgstr ""
 #. [unit_type]: id=Elvish High Lord, race=elf
 #: data/core/units/elves/High_Lord.cfg:4
 msgid "Elvish High Lord"
-msgstr "Gran señor élfico"
+msgstr "Gran cabaleiro élfico"
 
 #. [unit_type]: id=Elvish High Lord, race=elf
 #: data/core/units/elves/High_Lord.cfg:19
@@ -1559,7 +1561,7 @@ msgstr ""
 #. [unit_type]: id=Elvish Lord, race=elf
 #: data/core/units/elves/Lord.cfg:4
 msgid "Elvish Lord"
-msgstr "Señor élfico"
+msgstr "Cabaleiro élfico"
 
 #. [unit_type]: id=Elvish Lord, race=elf
 #: data/core/units/elves/Lord.cfg:19
@@ -1569,8 +1571,8 @@ msgid ""
 "fearsome in their command of magic."
 msgstr ""
 "Para os elfos, a nobreza é a recompensa por estar á altura do seu posto na "
-"sociedade. Os señores elfos son os máis sabios e fortes do seu pobo, e o seu "
-"dominio da maxia deixa abraiados aos propios elfos."
+"sociedade. Os cabaleiros dos elfos son os máis sabios e fortes do seu pobo, "
+"e o seu dominio da maxia deixa abraiados aos propios elfos."
 
 # Elvish Marksman=elfo tirador FIXADO
 #. [unit_type]: id=Elvish Marksman, race=elf
@@ -2192,13 +2194,13 @@ msgid ""
 "down infantrymen who have made the mistake of breaking formation, and in "
 "piercing defensive lines. However, they have limited use in defense."
 msgstr ""
-"Os xustadores son uns dos xinetes máis ousados e temidos de todo Wesnoth. "
-"Cunha armadura lixeira poden galopar velozmente, máis rápido que calquera "
-"dos seus compañeiros. As súas arriscadas tácticas son unha arma de dobre "
-"fío, e poden ben valerlles a gloria ou unha morte rápida. Os xustadores son "
-"excelentes á hora de cazar os infantes que cometeron o erro de saírse da "
-"formación, así como penetrando nas liñas defensivas do inimigo. Aínda así a "
-"súa defensa deixa un pouco que desexar."
+"Os xustadores son uns dos xinetes máis ousados e temidos de todo o Reino do "
+"Noroeste. Cunha armadura lixeira poden galopar velozmente, máis rápido que "
+"calquera dos seus compañeiros. As súas arriscadas tácticas son unha arma de "
+"dobre fío, e poden ben valerlles a gloria ou unha morte rápida. Os "
+"xustadores son excelentes á hora de cazar os infantes que cometeron o erro "
+"de saírse da formación, así como penetrando nas liñas defensivas do inimigo. "
+"Aínda así a súa defensa deixa un pouco que desexar."
 
 # Paladin=paladín FIXADO
 #. [unit_type]: id=Paladin, race=human
@@ -2260,12 +2262,12 @@ msgid ""
 "must take care against both spearmen and archers for whom their large size "
 "provide inviting targets."
 msgstr ""
-"Chegados a miúdo das rexións máis salvaxes e remotas de Wesnoth, os homes a "
-"cabalo adestran desde cativos para cabalgar e seguir un estrito código de "
-"honor. As súas cargas son potentes, aínda que resultan unha táctica "
-"perigosa, tal e como sempre se demostrou no campo de batalla. Os homes a "
-"cabalo son moi efectivos contra a maior parte da infantería, sobre todo "
-"contra aqueles que saíron da formación, pero deben ter coidado ao "
+"Chegados a miúdo das rexións máis salvaxes e remotas do Reino do Noroeste, "
+"os homes a cabalo adestran desde cativos para cabalgar e seguir un estrito "
+"código de honor. As súas cargas son potentes, aínda que resultan unha "
+"táctica perigosa, tal e como sempre se demostrou no campo de batalla. Os "
+"homes a cabalo son moi efectivos contra a maior parte da infantería, sobre "
+"todo contra aqueles que saíron da formación, pero deben ter coidado ao "
 "enfrontarse contra lanceiros e arqueiros, xa que para estes son brancos "
 "fáciles debido ao seu gran tamaño."
 
@@ -2378,11 +2380,11 @@ msgid ""
 "hold the ground they take. Their mobility and resilience make them of great "
 "value on the battlefield."
 msgstr ""
-"Os mellores homes montados dos exércitos de Wesnoth aprenden a manexar a "
-"bésta e son equipados con corceis máis fortes. Ben acoirazados e adestrados "
-"no uso da espada, estes soldados poden avanzar e defender o terreo que "
-"conquistan. A súa mobilidade e resistencia fainos moi valiosos no campo de "
-"batalla."
+"Os mellores homes montados dos exércitos do Reino do Noroeste aprenden a "
+"manexar a bésta e son equipados con corceis máis fortes. Ben acoirazados e "
+"adestrados no uso da espada, estes soldados poden avanzar e defender o "
+"terreo que conquistan. A súa mobilidade e resistencia fainos moi valiosos no "
+"campo de batalla."
 
 # Duelist=duelista FIXADO
 #. [unit_type]: id=Duelist, race=human
@@ -2405,11 +2407,11 @@ msgid ""
 "live long enough to be veterans typically do so by making such concessions "
 "to utility and survival."
 msgstr ""
-"É un costume peculiar entre a nobreza de Wesnoth enrolar os fillos nunha das "
-"dúas ordes de alféreces, onde os adestran na arte da equitación ou na da "
-"esgrima. Os duelistas reciben o nome por unha práctica por desgraza moi "
-"común entre os aristócratas novos na que o insulto, real ou ficticio, pode "
-"provocar unha inmediata demostración do seu dereito natural.\n"
+"É un costume peculiar entre a nobreza do Reino do Noroeste enrolar os fillos "
+"nunha das dúas ordes de alféreces, onde os adestran na arte da equitación ou "
+"na da esgrima. Os duelistas reciben o nome por unha práctica por desgraza "
+"moi común entre os aristócratas novos na que o insulto, real ou ficticio, "
+"pode provocar unha inmediata demostración do seu dereito natural.\n"
 "\n"
 "Os que teñen experiencia, que a miúdo visten traxe incluso se non son fillos "
 "de nobres, levan con eles unha pequena bésta que se agocha facilmente baixo "
@@ -2523,9 +2525,10 @@ msgstr ""
 "moi versátil no combate corpo a corpo, especialmente contra a cabalería.\n"
 "\n"
 "Porén, forxar unha alabarda é moito máis caro que forxar unha lanza, e nas "
-"mans dun inexperto a alabarda perde efectividade. Nos exércitos de Wesnoth "
-"adóitase conceder estas armas só aos piqueiros veteranos que demostraron que "
-"teñen a capacidade para empregalas de forma axeitada no campo de batalla."
+"mans dun inexperto a alabarda perde efectividade. Nos exércitos do Reino do "
+"Noroeste adóitase conceder estas armas só aos piqueiros veteranos que "
+"demostraron que teñen a capacidade para empregalas de forma axeitada no "
+"campo de batalla."
 
 # Heavy Infantryman=Infante pesado FIXADO
 #. [unit_type]: id=Heavy Infantryman, race=human
@@ -2727,13 +2730,13 @@ msgid ""
 "of pikemen is the bane of any cavalry charge, and with proper discipline and "
 "tactics, pikemen can also hold most other infantry at bay."
 msgstr ""
-"Os lanceiros prometedores dos exércitos de Wesnoth pasan xeralmente a "
-"empregar picas, e equípanse con algo bastante mellor que a armadura de coiro "
-"multicolor que vestían cando eran recrutas. As picas son moito máis longas "
-"que as lanzas, permitindo así diferentes tácticas de combate. As barreiras "
-"de piqueiros son o pesadelo de calquera carga de cabalería, e cunha "
-"disciplina e tácticas axeitadas, os piqueiros son capaces de manter a raia "
-"tamén á maior parte da infantería."
+"Os lanceiros prometedores dos exércitos do Reino do Noroeste pasan "
+"xeralmente a empregar picas, e equípanse con algo bastante mellor que a "
+"armadura de coiro multicolor que vestían cando eran recrutas. As picas son "
+"moito máis longas que as lanzas, permitindo así diferentes tácticas de "
+"combate. As barreiras de piqueiros son o pesadelo de calquera carga de "
+"cabalería, e cunha disciplina e tácticas axeitadas, os piqueiros son capaces "
+"de manter a raia tamén á maior parte da infantería."
 
 # pike=pica FIXADO
 #. [attack]: type=pierce
@@ -2759,11 +2762,11 @@ msgid ""
 "reliability and mastery of close combat are their best assets, for which "
 "they are well-renowned."
 msgstr ""
-"Os gardas reais son escollidos entre os mellores espadachíns de Wesnoth. "
-"Serven baixo as ordes da alta nobreza, sérvenlles de protección e son en "
-"certo modo unha especie de medalla que se colgan os seus señores. Na capital "
-"hai unha forza de gardas reais protexendo os terreos do pazo real e a "
-"familia real. Debido á súa relación de confianza cos seus superiores, "
+"Os gardas reais son escollidos entre os mellores espadachíns do Reino do "
+"Noroeste. Serven baixo as ordes da alta nobreza, sérvenlles de protección e "
+"son en certo modo unha especie de medalla que se colgan os seus señores. Na "
+"capital hai unha forza de gardas reais protexendo os terreos do pazo real e "
+"a familia real. Debido á súa relación de confianza cos seus superiores, "
 "envíanos a miúdo a misións de vital importancia en vez de enviar "
 "mercenarios. A fama téñena ben gañada grazas á súa formalidade e destreza no "
 "combate corpo a corpo."
