--- a/po/wesnoth-tb/gl.po
+++ b/po/wesnoth-tb/gl.po
@@ -9,14 +9,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-04-07 12:14+0200\n"
-"PO-Revision-Date: 2012-05-04 22:11+0200\n"
-"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
+"POT-Creation-Date: 2012-05-18 12:28+0200\n"
+"PO-Revision-Date: 2012-05-22 09:20+0200\n"
+"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
+"com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"adriyetichaves@gmail.com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Lokalize 1.4\n"
 
@@ -114,7 +116,7 @@ msgid ""
 "them not, until the day a dark mage settled in the region and began seeking "
 "sacrifices for his evil summonings."
 msgstr ""
-"O remoto territorio de Magre, nos límites occidentais do reino de Wesnoth, "
+"O remoto territorio de Magre, nos límites occidentais do Reino do Noroeste, "
 "era un lugar pacífico. Os seus habitantes había tempo que non sabían dos "
 "problemas do mundo. As guerras e mailos rumores de guerras non os afectaban, "
 "ata o día no que un mago escuro se asentou na rexión e comezou a buscar "
@@ -134,8 +136,9 @@ msgstr ""
 "campos, ao tempo que pronunciaban as palabras «<i>temede e obedecede ao mago "
 "Mordegue</i>». A xente que vivía en casas illadas, lonxe do núcleo da vila, "
 "desaparecía; os que non desaparecían, colllíanlle medo á escuridade da "
-"noite, e algúns ata á claridade do día. Pero o señor máis próximo estaba a "
-"un día a cabalo, e os mensaxeiros que foran na súa procura xamais regresaran."
+"noite, e algúns ata á claridade do día. Pero o cabaleiro máis próximo estaba "
+"a un día a cabalo, e os mensaxeiros que foran na súa procura xamais "
+"regresaran."
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:63
@@ -189,7 +192,7 @@ msgid ""
 "spoken since that evil day at Toen Caric. If he will not come for me, "
 "perhaps he will return to aid our village in its hour of desperate need."
 msgstr ""
-"12 de maio, 363 d.W.\n"
+"12 de maio, 363 d.N.\n"
 "Extracto to diario de Baran de Magre.\n"
 "\n"
 "Gustaríame enfrontarme a ese tal «Mordegue»! Creo que a miña maxia podería "
@@ -883,7 +886,7 @@ msgid ""
 "man rumored to be this mage’s brother. If that is true, he will stop at "
 "nothing, no more than would I if they held Mordak."
 msgstr ""
-"19 de maio, 363 d.W.\n"
+"19 de maio, 363 d.N.\n"
 "Extracto do diario de Rodarin “O solitario”.\n"
 "\n"
 "O último dos servos de Mordegue chegoiu esta mañá, coas novas de que o "
@@ -915,7 +918,7 @@ msgid ""
 "be different, but we are broken... and these two men are whole. In each "
 "other, in the ties that bind them, they have strength."
 msgstr ""
-"19 de maio, 363 d.W.\n"
+"19 de maio, 363 d.N.\n"
 "Extracto do diario de Rodarin “O solitario”.\n"
 "\n"
 "Fixen canto está nas miñas mans para fortificar este castelo. Os orcos que "
@@ -1285,7 +1288,7 @@ msgid ""
 "way around it we traveled through some truly beautiful countryside. It has "
 "given us plenty of time to talk."
 msgstr ""
-"27 de maio, 363 d.W.\n"
+"27 de maio, 363 d.N.\n"
 "Extracto do diario de Baran de Magre.\n"
 "\n"
 "Xa case estamos de volta. Levo unha semana difícil. Por unha banda, alégrome "
@@ -1319,7 +1322,7 @@ msgid ""
 "merely a remnant of my time locked away in that dungeon, or is it a sign of "
 "something real?"
 msgstr ""
-"27 de maio, 363 d.W.\n"
+"27 de maio, 363 d.N.\n"
 "Extracto do diario de Baran de Magre.\n"
 "\n"
 "Aínda que xa o levo mellor, de vez en cando aínda penso en Toen Carín. "
@@ -1528,7 +1531,7 @@ msgid ""
 "But as the company and I are passing through this part of the kingdom with a "
 "new patron, I have asked leave of him to visit my brother and he gave it."
 msgstr ""
-"22 de setembro, 365 d.W.\n"
+"22 de setembro, 365 d.N.\n"
 "Extracto do diario de Arvil de Magre.\n"
 "\n"
 "Magre ten moita mellor pinta que a última vez que a vin. Baran obrou "
@@ -1554,7 +1557,7 @@ msgid ""
 "\n"
 "In the meantime, though, it’s good to relax and enjoy the peace."
 msgstr ""
-"22 de setembro, 365 d.W.\n"
+"22 de setembro, 365 d.N.\n"
 "Extracto do diario de Arvil de Magre.\n"
 "\n"
 "E quen o ía dicir, resulta que o noso novo patrón é un elfo. Pero non é tan "
