--- a/po/wesnoth/gl.po
+++ b/po/wesnoth/gl.po
@@ -15,14 +15,18 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-05-18 11:13+0200\n"
-"PO-Revision-Date: 2012-05-01 19:25+0200\n"
-"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
+"POT-Creation-Date: 2012-05-18 12:28+0200\n"
+"PO-Revision-Date: 2012-05-22 08:49+0200\n"
+"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
+"com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"adriyetichaves@gmail.com>\n"
+"adriyetichaves@gmail.com>\n"
+"adriyetichaves@gmail.com>\n"
 "com>\n"
 "com>\n"
 "com>\n"
@@ -877,7 +881,7 @@ msgstr "Quero que esta moeda de ouro se transforme noutras dez."
 #. [option]: speaker=narrator
 #: data/core/macros/items.cfg:54
 msgid "Peace throughout Wesnoth."
-msgstr "A paz en Wesnoth"
+msgstr "A paz no Noroeste"
 
 #. [message]: speaker=unit
 #: data/core/macros/items.cfg:62
@@ -2445,7 +2449,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:5 data/hardwired/tips.cfg:137
 msgid "<i>― Great Mage Delfador, 516YW</i>"
-msgstr "<i>— Gran mago Delfador, 516 d.W.</i>"
+msgstr "<i>— Gran mago Delfador, 516 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:8
@@ -2479,7 +2483,7 @@ msgstr ""
 #: data/hardwired/tips.cfg:209 data/hardwired/tips.cfg:229
 #: data/hardwired/tips.cfg:238
 msgid "<i>― The Wesnoth Tactical Guide</i>"
-msgstr "<i>— A guía táctica de Wesnoth</i>"
+msgstr "<i>— A guía táctica do Noroeste</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:12
@@ -2495,7 +2499,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:13
 msgid "<i>― King Konrad, 536YW</i>"
-msgstr "<i>— Rei Conrad, 536 d.W.</i>"
+msgstr "<i>— Rei Conrad, 536 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:16
@@ -2514,7 +2518,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:17 data/hardwired/tips.cfg:129
 msgid "<i>― Memoirs of Gweddry, 627YW</i>"
-msgstr "<i>— Memorias de Uedri, 627 d.W.</i>"
+msgstr "<i>— Memorias de Uedri, 627 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:20
@@ -2537,8 +2541,8 @@ msgid ""
 "you are doing in comparison."
 msgstr ""
 "Hai algunhas xanelas de resumo útiles no menú principal. Por exemplo, o "
-"<b>Cadro da situación</b> permitirache saber como lles vai aos teus "
-"inimigos, e como che vai a ti en comparación."
+"<b>Cadro da situación</b> permitirache saber como lles vai aos  inimigos, e "
+"como che vai a ti en comparación."
 
 #. [tip]
 #: data/hardwired/tips.cfg:28
@@ -2556,7 +2560,7 @@ msgstr ""
 #: data/hardwired/tips.cfg:29 data/hardwired/tips.cfg:105
 #: data/hardwired/tips.cfg:213 data/hardwired/tips.cfg:225
 msgid "<i>― High Lord Kalenz, 470YW</i>"
-msgstr "<i>— Gran señor Cälén, 470 d.W.</i>"
+msgstr "<i>— Gran cabaleiro Cälén, 470 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:32
@@ -2587,12 +2591,12 @@ msgid ""
 "history of Wesnoth, and much more."
 msgstr ""
 "En www.wesnoth.org podes atopar guías de estratexia, soporte técnico, a "
-"historia de Wesnoth, e moito máis (en inglés)."
+"historia do Noroeste, e moito máis (en inglés)."
 
 #. [tip]
 #: data/hardwired/tips.cfg:41
 msgid "<i>― The Wesnoth Community</i>"
-msgstr "<i>— A comunidade de Wesnoth</i>"
+msgstr "<i>— A comunidade do Noroeste</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:44
@@ -2611,7 +2615,7 @@ msgstr ""
 msgid ""
 "<i>― Royal Compendium of Battle Terminology: Volume II (reprinted 221YW)</i>"
 msgstr ""
-"<i>— Compendio real de terminoloxía bélica - Volume II (edición do 212 d.W.)"
+"<i>— Compendio real de terminoloxía bélica - Volume II (edición do 212 d.N.)"
 "</i>"
 
 #. [tip]
@@ -2627,7 +2631,7 @@ msgstr ""
 #: data/hardwired/tips.cfg:125 data/hardwired/tips.cfg:133
 #: data/hardwired/tips.cfg:217
 msgid "<i>― Haldric II, 42YW, Handbook of Tactical Analysis: Volume I</i>"
-msgstr "<i>— Haldric II, 42 d.W., Manual de análise táctica - Volume I</i>"
+msgstr "<i>— Haldric II, 42 d.N., Manual de análise táctica - Volume I</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:52
@@ -2732,7 +2736,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:77
 msgid "<i>― Haldric II, 43YW, Handbook of Tactical Analysis: Volume II</i>"
-msgstr "<i>— Haldric II, 43 d.W., Manual de análise táctica - Volume II</i>"
+msgstr "<i>— Haldric II, 43 d.N., Manual de análise táctica - Volume II</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:80
@@ -2781,7 +2785,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:93 data/hardwired/tips.cfg:173
 msgid "<i>― Sir Kaylan, 498YW</i>"
-msgstr "<i>— Señor Cailan, 498 d.W.</i>"
+msgstr "<i>— Señor Cailan, 498 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:96
@@ -2797,7 +2801,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:97
 msgid "<i>― Sir Kaylan, 502YW</i>"
-msgstr "<i>— Señor Cailan, 502 d.W.</i>"
+msgstr "<i>— Señor Cailan, 502 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:100
@@ -2851,7 +2855,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:117
 msgid "<i>― Meneldur, 123YW</i>"
-msgstr "<i>— Meneldur, 123 d.W.</i>"
+msgstr "<i>— Meneldur, 123 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:120
@@ -2915,12 +2919,12 @@ msgstr ""
 #: data/hardwired/tips.cfg:140
 msgid "Use lines of troops to screen your injured units while they recover."
 msgstr ""
-"Usa liñas de unidades para protexer ás unidades feridas mentres serecuperan."
+"Usa liñas de unidades para protexer ás unidades feridas mentres se recuperan."
 
 #. [tip]
 #: data/hardwired/tips.cfg:141
 msgid "<i>― Princess Li’sar, 515YW</i>"
-msgstr "<i>— Princesa Li’sar, 515 d.W.</i>"
+msgstr "<i>— Princesa Li’sar, 515 d.N.</i>"
 
 # «Read» → «Podes ler» por tratarse dun consello (é información, non unha instrucción).
 #. [tip]
@@ -2960,7 +2964,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:157 data/hardwired/tips.cfg:205
 msgid "<i>― The Scroll of Chantal, 516YW</i>"
-msgstr "<i>— O manuscrito de Chantal, 516 d.W.</i>"
+msgstr "<i>— O manuscrito de Chantal, 516 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:160
@@ -2980,7 +2984,7 @@ msgstr "Os ataques <i>arcanos</i> son moi efectivos contra os non mortos."
 #. [tip]
 #: data/hardwired/tips.cfg:165
 msgid "<i>― Great Sage Dacyn, 626YW</i>"
-msgstr "<i>— Gran sabio Dasin, 626 d.W.</i>"
+msgstr "<i>— Gran sabio Dasin, 626 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:168
@@ -3038,7 +3042,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:185
 msgid "<i>― Queen Li’sar, 528YW</i>"
-msgstr "<i>— Raíña Li’sar, 528 d.W.</i>"
+msgstr "<i>— Raíña Li’sar, 528 d.N.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:188
@@ -4178,7 +4182,7 @@ msgstr "Non se puido cargar o mapa da partida: "
 
 #: src/game_controller.cpp:1077 src/game_controller_abstract.cpp:99
 msgid "The Battle for Wesnoth"
-msgstr "A batalla por Wesnoth"
+msgstr "A batalla polo Noroeste"
 
 #: src/game_controller.cpp:1196
 msgid "The following add-on had errors and could not be loaded:"
@@ -5293,10 +5297,9 @@ msgid ""
 "continue? If you have downloaded add-ons, do not click 'ok'! They would "
 "instantly take over your computer. You have been warned."
 msgstr ""
-"Estás a piques de abrir unha brecha na seguridade do Wesnoth. Seguro que "
-"queres continuar? Se descargaches complementos, non premas en «Aceptar»! "
-"Calquera podería tomar o control completo sobre o teu computador. Quedas "
-"avisado."
+"Estás a piques de abrir unha brecha na seguridade do xogo. Seguro que queres "
+"continuar? Se descargaches complementos, non premas «Aceptar»! Calquera "
+"podería tomar o control completo do teu computador. Quedas advertido."
 
 #: src/menu_events.cpp:3454
 msgid "Unsafe mode enabled!"
@@ -11228,7 +11231,7 @@ msgstr "Opcións de planificación"
 #, fuzzy
 #~ msgid ""
 #~ "<i>― Haldric II, 42 YW, from Handbook of Tactical Analysis: Volume I</i>"
-#~ msgstr "— Manual de análise táctica - Volume I, Haldric II, 42 d.W."
+#~ msgstr "— Manual de análise táctica - Volume I, Haldric II, 42 d.N."
 
 #~ msgid "About to upload statistics — Help us make Wesnoth better for you!"
 #~ msgstr ""
